<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ggradient"
    android:padding="20dp"
    tools:context=".RegisterScreen">

    <LinearLayout
        android:id="@+id/linearBodyReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_netcore"/>

        <EditText
            android:id="@+id/user_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/useremail"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#A9A9A9"
            />

        <EditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#A9A9A9"
            />

        <EditText
            android:id="@+id/pass_field2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/cpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#A9A9A9"
            />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#00997b"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/log_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Already registered? Click here:"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/log_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#0F4C81"
            android:text="@string/login"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>